syntax = "proto3";

package collectorrpc;

service CollectorService {
  rpc GetNodeConfig(NodeConfigRequest) returns (NodeConfigResponse);
  rpc PostEligiblePeers(EligiblePeersRequest) returns (EligiblePeersResponse);
  rpc PostTargetPeerCount(TargetPeerCountRequest) returns (TargetPeerCountResponse);
  rpc GetCurrentPeers(CurrentPeersRequest) returns (CurrentPeersResponse);
}

message Pubkey {
  string pubkey = 1;
}

message SocketAddress {
  string address = 1;
}

message NodeConfigRequest {}

message NodeConfigResponse {
  repeated SocketAddress listen_addrs = 1;
  optional bytes node_alias = 2;
  Pubkey node_id = 3;
}

message PeerConnectionInfo {
  Pubkey pubkey = 1;
  repeated SocketAddress socket_addrs = 2;
}

message PeerDetails {
  Pubkey pubkey = 1;
  SocketAddress socket_addr = 2;
  bool is_persisted = 3;
  bool is_connected = 4;
}

message EligiblePeersRequest {
  repeated PeerConnectionInfo peers = 1;
}

message EligiblePeersResponse {}

message CurrentPeersRequest {}

message CurrentPeersResponse {
  repeated PeerDetails peers = 1;
}

message TargetPeerCountRequest {
  uint32 target = 1;
}

message TargetPeerCountResponse {}